FEAT: finishing the project

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex",
     "lint": "eslint src -e .ts",
+    "build": "tsup src",
     "test": "vitest"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^9.16.0",
     "supertest": "^7.0.0",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
